[package]
name = "lan-im"
version = "0.1.0"
description = "LAN Instant Messenger"
authors = ["LAN-IM"]
edition = "2021"

[package.metadata.tauri]

[lib]
name = "lan_im_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri          = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell       = "2.0"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
rusqlite       = { version = "0.31", features = ["bundled"] }
tokio          = { version = "1", features = ["full"] }
uuid           = { version = "1", features = ["v4"] }
local-ip-address = "0.6"
socket2        = "0.5"
log            = "0.4"
env_logger     = "0.11"
once_cell      = "1"
chrono         = { version = "0.4", features = ["serde"] }
aes-gcm        = "0.10"
rand           = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
