[package]
name = "markdown-notes-app"
version = "0.1.0"
description = "A Tauri-based Markdown notes application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comrak = "0.20"
base64 = "0.21"
printpdf = "0.7"
image = "0.24"
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
