[package]
name = "p2p-transfer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "p2p-transfer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-shell  = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["codec"] }
futures     = "0.3"
bytes       = "1"

thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid        = { version = "1", features = ["v4"] }
sha2        = "0.10"
hex         = "0.4"
get_if_addrs = "0.5"

[profile.dev]
incremental = true

[profile.release]
opt-level   = 3
lto         = "thin"
strip       = true
codegen-units = 1
