[package]
name = "pdf-converter"
version = "1.0.0"
description = "PDF 万能转换器 - 支持多种格式互相转换"
authors = ["PDF Converter Team"]
edition = "2021"

[lib]
name = "pdf_converter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
