[package]
name = "system-monitor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "path-all", "notification-all", "shell-open", "system-tray", "notification"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
walkdir = "2.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
